                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 10-04-2006 added: if album info from the currently playling album is downloaded it will update the music overlay with the new cover
 - 10-04-2006 fixed: nav sounds are gone after skin change
 - 10-04-2006 fixed: use correct subnet mask for samba instead of hardcoded 255.255.255.0
 - 10-04-2006 fixed: xbmc would easily read garbage if asked to read text files from dvd.
 - 09-04-2006 changed: Added free memory logging to logfile and removed current date (time is still there)
 - 09-04-2006 updated: chinese (simple) langugae file (Thanks to hibaby)
 - 09-04-2006 updated: Hebrew language file (Thnx to vgs)
 - 09-04-2006 added: xml header with encoding to language files. Language files now support UTF-8
 - 09-04-2006 changed: A control set hidden from the code takes priority over visibility set from the skin.
 - 08-04-2006 added: pythonscripts can now decide what playcore to use. This allows playback of streams that mplayer does not support
 						example: xbmc.Player(xbmc.PLAYER_CORE_DVPLAYER).Play('.....');
 - 08-04-2006 fixed: [ 1459126 ] LogPath XML Setting Not Respected
 - 08-04-2006 fixed: reverted old menuoverlay fix for dvdplayer and fixed it a bit differently
 - 08-04-2006 fixed: Skin font and fanspeed setting spincontrols displayed "?-1?".
 - 08-04-2006 added: initial code to provide albumart to visualisations
 - 08-04-2006 fixed: cache function would abort if filesystem wasn't able to read the exact requested size